--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{article}
 
 
-\title{Template}
-\author{Name}
+\title{Teorie her}
+\author{Matěj Popďakunik}
 
 \usepackage[czech]{babel}
 
@@ -88,6 +88,9 @@
 
 
 \maketitle
+
+\newpage 
+\subfile{notes/2-24.tex}
 
 
 
