--- a/main.tex
+++ b/main.tex
@@ -29,6 +29,9 @@
 \sisetup{round-precision=2,round-mode=figures,scientific-notation=true}
 
 
+
+\usepackage{multicol}
+
 %Custom commands
 
         % := and =:
@@ -36,6 +39,9 @@
 \newcommand{\eqcolon}{\mathrel{\resizebox{\widthof{$\mathord{=}$}}{\height}{ $\!\!=\!\!\resizebox{1.2\width}{0.8\height}{\raisebox{0.23ex}{$\mathop{:}$}}\!\!$ }}}
  
 
+\newcommand*{\cross}{\ensuremath{\times}}
+
+% \newcommand*{\circle}{\ensuremath{\times}}
 
 % Proof environment definitions 
 
@@ -91,7 +97,15 @@
 
 \newpage 
 \subfile{notes/2-24.tex}
+\newpage
+
+\part{Domácí úkoly}
+
+\section{První domácí úkol}
+\subfile{hw/1.tex}
 
 
+\section{Druhý domácí úkol}
+\subfile{hw/2.tex}
 
 \end{document}
